[gd_scene load_steps=26 format=3 uid="uid://ch3qt1lbnyc1q"]

[ext_resource type="Script" uid="uid://ba673y8fp5o3t" path="res://scripts/main_menu.gd" id="1_3er1b"]
[ext_resource type="Texture2D" uid="uid://b7fqnco04f1ty" path="res://assets/UI/Buttons/new_game_normal.png" id="2_cht4j"]
[ext_resource type="AudioStream" uid="uid://dpakgqvnug7o0" path="res://assets/music/53 Silksong.mp3" id="2_r3wny"]
[ext_resource type="Texture2D" uid="uid://cfo6iaw1lalxf" path="res://assets/UI/Buttons/new_game_pressed.png" id="3_os2d6"]
[ext_resource type="Texture2D" uid="uid://cgsryfdh5e7sh" path="res://assets/UI/Buttons/new_game_hover.png" id="4_v0h3m"]
[ext_resource type="Texture2D" uid="uid://h1wchpi7tr15" path="res://assets/UI/Buttons/continue_normal.png" id="5_sra1m"]
[ext_resource type="Texture2D" uid="uid://biy6rd88yktku" path="res://assets/UI/Buttons/continue_pressed.png" id="6_unisd"]
[ext_resource type="Texture2D" uid="uid://bbmehu1onvrs6" path="res://assets/UI/Buttons/continue_hover.png" id="7_2nbnt"]
[ext_resource type="Texture2D" uid="uid://cuy4oodfsuwvh" path="res://assets/UI/Buttons/settings_normal.png" id="8_ceq6q"]
[ext_resource type="Texture2D" uid="uid://dmdtp204f5mfv" path="res://assets/UI/Buttons/settings_pressed.png" id="9_t6h5b"]
[ext_resource type="Texture2D" uid="uid://b745ei8l8ryhk" path="res://assets/UI/Buttons/settings_hover.png" id="10_s7uu8"]
[ext_resource type="Texture2D" uid="uid://dbk7g1inylq00" path="res://assets/UI/Buttons/quit_normal.png" id="11_g7f83"]
[ext_resource type="Texture2D" uid="uid://cdw2ooqas6ch6" path="res://assets/UI/Buttons/quit_pressed.png" id="12_r3wny"]
[ext_resource type="Texture2D" uid="uid://dsl4jdpt75on4" path="res://assets/UI/Buttons/quit_hover.png" id="13_ruj6x"]
[ext_resource type="Script" uid="uid://dal73gnhy2emr" path="res://scripts/main_menu_pop_up.gd" id="14_g7f83"]
[ext_resource type="Texture2D" uid="uid://dno5n6jx7d2wo" path="res://assets/UI/Panels/Big panel.png" id="14_s7uu8"]
[ext_resource type="Texture2D" uid="uid://dkf436eoldm3i" path="res://assets/UI/Panels/red_banner.png" id="15_g7f83"]
[ext_resource type="Texture2D" uid="uid://bs04jkdv8pqqt" path="res://assets/UI/Buttons/yes_normal.png" id="16_r3wny"]
[ext_resource type="Texture2D" uid="uid://bfhqxyq4h82vx" path="res://assets/UI/Buttons/yes_pressed.png" id="17_ruj6x"]
[ext_resource type="LabelSettings" uid="uid://3avxjuddcbce" path="res://resources/default_banner_label.tres" id="18_ruj6x"]
[ext_resource type="Texture2D" uid="uid://bs73o5sop68y6" path="res://assets/UI/Buttons/yes_hover.png" id="18_xcvof"]
[ext_resource type="Texture2D" uid="uid://dkknss1tn5h6q" path="res://assets/UI/Buttons/no_normal.png" id="19_mh7xh"]
[ext_resource type="Texture2D" uid="uid://cnscuvvu6a76s" path="res://assets/UI/Buttons/no_pressed.png" id="20_0d2hm"]
[ext_resource type="Texture2D" uid="uid://dwwlav0kp4ogq" path="res://assets/UI/Buttons/no_hover.png" id="21_wwk1p"]

[sub_resource type="LabelSettings" id="LabelSettings_3lrx3"]
font_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3er1b")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_r3wny")
volume_db = -10.0
parameters/looping = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -132.0
offset_right = 448.0
offset_bottom = 260.0
grow_vertical = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("2_cht4j")
texture_pressed = ExtResource("3_os2d6")
texture_hover = ExtResource("4_v0h3m")
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("5_sra1m")
texture_pressed = ExtResource("6_unisd")
texture_hover = ExtResource("7_2nbnt")
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("8_ceq6q")
texture_pressed = ExtResource("9_t6h5b")
texture_hover = ExtResource("10_s7uu8")
stretch_mode = 5

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("11_g7f83")
texture_pressed = ExtResource("12_r3wny")
texture_hover = ExtResource("13_ruj6x")
stretch_mode = 5

[node name="PopUp" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -260.0
offset_right = -64.0
offset_bottom = 248.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("14_g7f83")

[node name="PanelTextureRect" type="TextureRect" parent="PopUp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_s7uu8")
stretch_mode = 5
flip_v = true

[node name="BannerTextureRect" type="TextureRect" parent="PopUp"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 40.0
offset_right = 192.0
offset_bottom = 136.0
grow_horizontal = 2
texture = ExtResource("15_g7f83")
stretch_mode = 5

[node name="BannerLabel" type="Label" parent="PopUp/BannerTextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = 32.0
offset_right = -48.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Debug Text"
label_settings = ExtResource("18_ruj6x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PopUp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -94.0
offset_right = 160.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Debug description very loooooooooooooooooooooooooooooooooooooooooooooooooooooooooong"
label_settings = SubResource("LabelSettings_3lrx3")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PopUp"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -188.0
offset_right = 192.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 32
alignment = 1

[node name="YesButton" type="TextureButton" parent="PopUp/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
texture_normal = ExtResource("16_r3wny")
texture_pressed = ExtResource("17_ruj6x")
texture_hover = ExtResource("18_xcvof")
stretch_mode = 5

[node name="NoButton" type="TextureButton" parent="PopUp/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
texture_normal = ExtResource("19_mh7xh")
texture_pressed = ExtResource("20_0d2hm")
texture_hover = ExtResource("21_wwk1p")
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PopUp/HBoxContainer/YesButton" to="PopUp" method="_on_yes_button_pressed"]
[connection signal="pressed" from="PopUp/HBoxContainer/NoButton" to="PopUp" method="_on_no_button_pressed"]
